<resources>
    <string name="app_name">OpenGM</string>
    <string name="loading_dialog">Loading. Please wait &#8230;.</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="incorrect_activity_login">Invalid username or password</string>
    <string name="incorrect_password">Invalid password</string>
    <string name="invalid_password_activity_login">Password has not a correct format</string>
    <string name="login_now_activity_login">Login</string>
    <string name="forgotten_password_activity_login"><u>Forgot your password?</u></string>
    <string name="register_now_activity_login">Don\'t have any account yet? Register now</string>
    <string name="continue_dialog_password">Reset my password</string>
    <string name="cancel_dialog_password">Cancel</string>
    <string name="success_dialog_password">Email successfully sent</string>
    <string name="error_dialog_password">Error while sending a new password by mail &#8230;</string>
    <string name="how_to_password">A password should contain between 8 and 30 characters, with at least a cap, a lowercase letter and a number.</string>
    <string name="success_password_change_toast">Password updated successfully !</string>
    <string name="error_password_change_toast">Error while updating your password</string>
    <string name="success_edit_profile">Informations updated successfully !</string>
    <string name="error_edit_profile">Error while updating your informations</string>
    <string name="title_activity_register">Create an account</string>
    <string name="title_activity_my_groups">My Groups</string>
    <string name="noGroupsYet">No groups yet ? Click on the + button below to create one !</string>
    <string name="logoutWarning">Are you sure you want to logout ?</string>
    <string name="logout">Logout</string>
    <string name="cancel">Cancel</string>
    <string name="hint_username_activity_register">Username</string>
    <string name="hint_password_activity_register">Password</string>
    <string name="hint_firstname_activity_register">First name</string>
    <string name="hint_lastname_activity_register">Last name</string>
    <string name="hint_phone_activity_register">Phone number</string>
    <string name="hint_email_activity_register">Email</string>
    <string name="hint_confirm_password_activity_register">Confirm password</string>
    <string name="sign_up_activity_register">Sign up</string>
    <string name="emtpy_username_activity_register">Username should not be empty</string>
    <string name="empty_password_activity_register">Password should not be empty</string>
    <string name="empty_email_activity_register">Email should not be empty</string>
    <string name="empty_firstname_activity_register">First name should not be empty</string>
    <string name="empty_lastname_activity_register">Last name should not be empty</string>
    <string name="incorrect_email_activity_register">Email has not a correct format</string>
    <string name="non_matching_passwords_activity_register">Passwords don\'t match</string>
    <string name="incorrect_phone_number_activity_register">A valid phone number should be entered</string>
    <string name="short_password_activity_register">Password is too short</string>
    <string name="long_password_activity_register">Password is too long</string>
    <string name="case_password_activity_register">Password should contain at least a small and a cap letter</string>
    <string name="no_letter_password_activity_register">Password should contain a letter</string>
    <string name="no_number_password_activity_register">Password should contain a number</string>
    <string name="symbol_password_activity_register">Password contains some illegal characters</string>
    <string name="taken_username_activity_register">Username %s already taken</string>
    <string name="taken_email_activity_register">Email %s already taken</string>
    <string name="title_activity_group_home">GroupHomeActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="title_activity_manage_roles">Manage Roles</string>
    <string name="done">Done</string>
    <string name="title_activity_join_group">Join Group</string>
    <string name="join_group_activity_enter_name_hint">Enter a group name</string>
    <string name="ok">Ok</string>
    <string name="title_activity_create_group">Create Group</string>
    <string name="enterGroupNameHint">Enter group\'s name</string>
    <string name="chooseGroupPhoto">Choose a group\'s photo</string>
    <string name="enterGroupDescriptionHint">Enter group\'s description</string>
    <string name="title_activity_event_list">Event list : groupe X</string>
    <string name="action_settings">Settings</string>
    <string name="addButtonText">Add +</string>
    <string name="OkEditButtonText">OK</string>
    <string name="CancelEditButtonText">Cancel</string>
    <string name="title_activity_show_event">ShowEventActivity</string>
    <string name="title_activity_create_edit_event">Create/Edit Event : groupe X</string>
    <string name="title_activity_add_remove_participants">AddRemoveParticipantsActivity</string>
    <string name="EventNameTextHint">Name</string>
    <string name="EventPlaceTextHint">Place</string>
    <string name="EventDateTextHint">Select a Date</string>
    <string name="EventParticipantsText">Participants</string>
    <string name="EventDescriptionTextHint">Description</string>
    <string name="EditEventButtonText">edit</string>
    <string name="EventTimeTextHint">Select a Time</string>
    <string name="okayButtonText">Ok</string>
    <string name="title_activity_groups_home">GroupsHomeActivity</string>
    <string name="leaveGroupWarning">Are you sure you want to leave the group %s ?</string>
    <string name="leaveTheGroup">Leave the group</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_members">Members</string>
    <string name="title_members_select_mode">Select</string>
    <string name="members_hint">Type mail address&#8230;</string>
    <string name="members_text">Add new member</string>
    <string name="invite">Invite</string>
    <string name="action_add_person">Add member</string>
    <string name="action_remove_person">Remove member</string>
    <string name="action_change_roles">Change roles</string>
    <string name="dialog_add_member_title">Add a member</string>
    <string name="dialog_add_member_text">Enter username or email:</string>
    <string name="add">Add</string>
    <string name="title_activity_modify_group">ModifyGroup</string>
    <string name="modify_group_add">Add members</string>
    <string name="modify_group_roles">Create new roles</string>
    <string name="CreateEditEarlyDate">Invalide date (already past)</string>
    <string name="CreateEditEmptyTimeDateErrorMessage">Time and Date must be specified</string>
    <string name="CreateEditEmptyDateErrorMessage">Date must be specified</string>
    <string name="CreateEditEmptyTimeErrorMessage">Time must be specified</string>
    <string name="CreateEditEmptyNameErrorMessage">Name must be specified</string>
    <string name="CreateEditNoParticipants">Participants must be specified</string>
    <string name="EventListSuccessfullAdd">Event successfully added</string>
    <string name="EventListFailToAdd">Couldn\'t add the new event</string>
    <string name="CreateEditFailToAddParticipants">Fail to add participants</string>
    <string name="CreateEditSuccessfullAddParticipants">Successfully added participants</string>
    <string name="groupNameTooShort">Group name is too short</string>
    <string name="groupNameTooLong">Group name is too long</string>
    <string name="groupNameStartsWithSpace">Group name cannot start with a space</string>
    <string name="groupNameIllegalCharacters">Group name contains illegal characters, only letters, numbers and spaces allowed.</string>
    <string name="groupNameInvalid">Group name is invalid</string>
    <string name="title_activity_edit_user_profile">Edit Profile</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_show_conversation_activity">ShowConversationActivity</string>
    <string name="title_activity_show_messages_activity">ShowMessagesActivity</string>
    <string name="group_menu_home">Home</string>
    <string name="group_menu_members">Members</string>
    <string name="group_menu_events">Events</string>
    <string name="group_menu_messages">Messages</string>
    <string name="group_menu_polls">Polls</string>
    <string name="group_menu_manage">Manage group</string>
    <string name="group_menu_leave">Leave group</string>
    <string name="group_menu_settings">My settings</string>
    <string name="action_add_role">Add role</string>
    <string name="action_remove_role">Remove role</string>
    <string name="action_modify_permissions">Modify Permissions</string>
</resources>