<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="ch.epfl.sweng.opengm.ch.epfl.sweng.opengm.events.CreateEditEventActivity">

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/CreateEditEventNameText"
        android:hint="@string/EventNameTextHint"
        android:editable="true"
        android:textAlignment="center" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/CreateEditEventPlaceText"
        android:layout_below="@+id/CreateEditEventNameText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/EventPlaceTextHint"
        android:editable="true"
        android:textAlignment="center" />


    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/CreateEditEventDateText"
        android:layout_below="@+id/CreateEditEventPlaceText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/EventDateTextHint"
        android:editable="true"
        android:textAlignment="center"
        android:inputType="date" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/CreateEditEventDescriptionScrollView"
        android:layout_below="@+id/CreateEditEventDateText"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_above="@+id/CreateEditEventParticipantsButton">

        <MultiAutoCompleteTextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/CreateEditEventDescriptionText"
            android:textAlignment="center"
            android:hint="@string/EventDescriptionTextHint"
            android:editable="true"/>
    </ScrollView>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cancelEditButton"
        android:textAlignment="center"
        android:text="@string/CancelEditButtonText"
        android:layout_alignParentBottom="true"
        android:clickable="true"
        android:onClick="onCancelButtonClick"
        android:layout_alignParentLeft="true" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/CreateEditEventParticipantsButton"
        android:text="@string/EventParticipantsText"
        android:textAlignment="center"
        android:clickable="true"
        android:onClick="onParticipantsButtonClick"
        android:layout_above="@id/cancelEditButton"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/CreateEditOkButton"
        android:textAlignment="center"
        android:text="@string/OkEditButtonText"
        android:layout_alignParentBottom="true"
        android:clickable="true"
        android:onClick="onOkButtonClick"
        android:layout_alignParentRight="true" />

</RelativeLayout>
